sumo/tests/dfrouter/errors/network/edge/lane/root__edge__lane#length__ungiven22/errors.dfrouter
Error: Attribute 'length' is missing in definition of lane '2_1'.
Quitting (on error).
